added hot loader to sample

--- a/sample/webpack/package.json
+++ b/sample/webpack/package.json
@@ -4,12 +4,20 @@
   "description": "A sample page for React-PDF.",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server --config webpack.config.hot.js"
   },
   "author": {
     "name": "Wojciech Maj",
     "email": "kontakt@wojtekmaj.pl"
   },
+  "contributors": [
+    {
+      "name": "Allen Gammel",
+      "email": "allengammel@gmail.com",
+      "url": "https://github.com/intolerance"
+    }
+  ],
   "license": "MIT",
   "dependencies": {
     "react": "^16.5.0",
@@ -34,9 +42,11 @@
     "file-loader": "^2.0.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "react-hot-loader": "^4.12.1",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1"
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.7.2"
   }
 }
