--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
   },
   "contributors": [
     {
+      "name": "Allen Gammel",
+      "email": "allengammel@gmail.com",
+      "url": "https://github.com/intolerance"
+    },
+    {
       "name": "Anenth",
       "email": "anenthvishnu@gmail.com"
     },
